--- a/.gitignore
+++ b/.gitignore
@@ -5,4 +5,14 @@
 /EngRel/
 /EngDeb/
 /MyCheatLibrary/CheatLibrary.VC.db
-/TR_DDOS/.vs/
+/MyCheatLibrary/Release/
+/MyCheatLibrary/Debug/
+/TR_DDOS/
+/TR_Hacker/obj/
+/Register/
+/Register_old/
+/TR_DATA/
+/RegitserInfo/
+/Hacker_Test/
+/Terraria_Hacker/.vs/
+/Image Packer/.vs
